Try to fix grid/search bar overlap

--- a/style.css
+++ b/style.css
@@ -151,17 +151,16 @@ body {
 
 #hero {
     background-color: #0B467E;
-    height: 85vh;
+    height: 100vh;
     color: white;
 }
 
 .hero-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 3.5rem 1.4rem;
     gap: 1rem;
-
-    position: relative;
 }
 
 .hero-text .heading {
@@ -186,8 +185,7 @@ body {
     gap: 1rem;
     min-height: 25rem;
 
-    position: absolute;
-    inset: 24rem 1.4rem;
+    margin-top: 3.5rem;
 }
 
 .hero-img {
@@ -281,7 +279,7 @@ body {
 /* --------------------- Search Bar ---------------------- */
 
 #search-bar {
-    margin-top: 6rem;
+    margin-top: 4rem;
 }
 
 .search-container {
